* Database syntax does fully support MySQL and Redshift now

.Security
* New cookie settings in context.xml and web.xml
* Preventing some possible injections in server responses
* SubjectFilter can now be applied to virtual file system
* SubjectFilters resolved inline (i.e. value list) are using prepared statements now

.Development
* Made bcduiApiSubs.js available which can be used in IDEs for auto-suggest


.Incompatibilities:
** Move shiro settings from web.xml to WEB-INF/shiro.ini, add +
`<listener><listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class></listener>` +
before shiro filter, +
update shiro filter from `org.apache.shiro.web.servlet.IniShiroFilter` to `org.apache.shiro.web.servlet.ShiroFilter`
** Add security features regarding cookies to context.xml and web.xml
** Add SubjectFilters to `bcd_virtualfilesystem.xml` BindingSet
** WrqModifier process() does not any more return a fragment in some cases but does now always work on the input document
** bnd:Coalesce in Binding files was removed
** For SQL engine, i.e. plain SQL-code with referencing BindingSets translated with `SQLEngine::transform()`, getTableName() was renamed to getTableReference() +
to reference the table $t (note: without `.getTableReference()` is preferred anyway)
** TextToUrl servlet returns found value in an XML element now
** removed SubjectSettingsFilter, SessionAttributesManager, SessionAttribute servlet, bcdui.config.security, client sided setting is done now via SubjectPreferences with bcdui/conf/subjectPreferences.xml as config.
* Ensure adding bcd_userId:userId and bcd_i18n:lang to subjectSettings.xml
* Removed bcdBean creationStamp, use bcdBean.currentTimestampUtc instead which is the date string in UTC timezone
* bcd_virtualFileSystem additionally got vfsPathLimit SubjectFilter which limits read/write access on the VFS. Ensure to add user rights (or default values) for: